# Pastebin

./: .gitignore  README.md  build.sh  docker-compose.yaml
ApiMicroservice/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
ApiMicroservice/src/: index.py
ApiMicroservice/src/adapters/storage/memcached/: cache.py  connection.py
ApiMicroservice/src/adapters/storage/sql/: connection.py
ApiMicroservice/src/adapters/storage/sql/mappers/: paste.py
ApiMicroservice/src/adapters/storage/sql/migrations/: env.py
ApiMicroservice/src/adapters/storage/sql/models/: __init__.py  base.py  paste.py
ApiMicroservice/src/adapters/storage/sql/repositories/: paste.py
ApiMicroservice/src/adapters/transport/grpc/: client.py
ApiMicroservice/src/adapters/transport/grpc/providers/: slug.py
ApiMicroservice/src/adapters/transport/rest/: __init__.py  exception_handlers.py  routes.py  schemas.py
ApiMicroservice/src/background/: run.sh  tasks.py  worker.py
ApiMicroservice/src/config/: __init__.py  ioc.py  settings.py
ApiMicroservice/src/domain/config/: enums.py
ApiMicroservice/src/domain/dto/: base.py  paste.py
ApiMicroservice/src/domain/entities/: base.py  paste.py
ApiMicroservice/src/domain/exceptions/: base.py  paste.py
ApiMicroservice/src/domain/ports/: cache.py  paste.py  slug.py
ApiMicroservice/src/domain/services/: paste.py
ApiMicroservice/src/helpers/background/: run.sh  tasks.py  worker.py
ApiMicroservice/tests/: conftest.py  test_paste_entity.py  test_paste_service.py
SlugMicroservice/: .dockerignore  Dockerfile  index.py  pyproject.toml  settings.py
SlugMicroservice/proto/py/: slug_service_pb2_grpc.py
SlugMicroservice/src/: index.py
SlugMicroservice/src/api/: grpc.py
SlugMicroservice/src/proto/: slug_service.proto
SlugMicroservice/src/proto/py/: slug_service_pb2.py
SlugMicroservice/src/services/: slug.py
SlugMicroservice/src/utils/: base62.py  cache.py
SlugMicroservice/utils/: base62.py
(+3 files in other folders)
