[tool.poetry]
name = "apimicroservice"
version = "0.1.0"
description = ""
authors = ["Andrey <ykt_andrey@mail.ru>"]
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"


bcrypt = "^4.1.3"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.0"

injector = "^0.22.0"
alembic = "^1.13.2"
aiomcache = "^0.8.2"
celery = {extras = ["redis"], version = "^5.4.0"}
asyncpg = "^0.29.0"
rocketry = "^2.5.1"

pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "src.index:run_uvicorn_server"