[tool.poetry]
name = "slugmicroservice"
version = "0.1.0"
description = ""
authors = ["Andrey <ykt_andrey@mail.ru>"]
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.65.1"
grpcio-tools = "^1.65.1"
asyncpg = "^0.29.0"
redis = "^5.0.7"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "src.index:main"
